log
Thu 05 Oct 2023 06:54:30 PM UTC: 
 sudoku.c | 37 ++++++++++++++++++++++++++++++++-----
 1 file changed, 32 insertions(+), 5 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:96:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   96 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
0ce1a56
Thu 05 Oct 2023 07:10:26 PM UTC: 
 sudoku.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:23: error: unused variable ‘ady_node’ [-Werror=unused-variable]
   73 |                 Node *ady_node = copy(aux_node);
      |                       ^~~~~~~~
test.c: At top level:
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:112:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  112 | int main( int argc, char *argv[] ){
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
80a0a4f
Thu 05 Oct 2023 07:11:23 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:113:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  113 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
efc7351
Thu 05 Oct 2023 07:12:12 PM UTC: 
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:115:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  115 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
b3b8218
